# chalot_C1

./: .gitignore  Cargo.toml  NLLM_ARCHITECTURE.md  OPTIMIZATION_SUMMARY.md  QUICK_REFERENCE.md  QWEN_CONVERSION_GUIDE.md  QWEN_IMPLEMENTATION_SUMMARY.md  README.md  benchmark_train.py  bk.txt  calc_size.py  check_merges.py  debug_offsets.py  export_merges.py  quick_start_qwen.sh  qwen_to_myai.py  requirements.txt  setup_qwen_conversion.bat  setup_qwen_conversion.sh  test_format.py  train_distill.py  train_tiny.py  validate_myai.py
src/: crawler.rs  main.rs  model.rs  tensor.rs  tokenizer.rs
src/model/: brain_map.rs  config.rs  constants.rs  dummy.rs  engine.rs  header.rs  instinct.rs  memory.rs  mmap_prefetch.rs  mod.rs  speculative.rs  state.rs  supervisor.rs  thread_pool.rs  weight_index.rs
src/tensor/: activations.rs  attention_helpers.rs  bitnet.rs  flash_attention.rs  matmul.rs  mod.rs  normalization.rs  quantization.rs  rope.rs  sampling.rs  tests.rs  view.rs
src/tokenizer/: bpe.rs  constants.rs  core.rs  mod.rs  optimized.rs  persistence.rs  tests.rs
