[package]
name = "AI_chalot_C1"
version = "0.2.0"
edition = "2021"

[dependencies]
memmap2 = "0.9"
ureq = "2.9"
serde_json = "1.0"
rayon = "1.8"
once_cell = "1.19"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
